Cambio testo pulsante in base al tema attivo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <li><a href="">Home</a></li>
             <li><a href="">Articoli</a></li>
 
+
         </ul>
+        <button id="toggle-dark">Dark mode</button>
 
 
     </nav>
