creata pagina articoli

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 <body>
     <nav>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Articoli</a></li>
-
-
+            <li><a href="index.html">Home</a></li>
+            <li><a href="blog.html">Articoli</a></li>
         </ul>
         <button id="toggle-dark">Dark mode</button>
+    </nav>
+
+
+    </ul>
+
 
 
     </nav>
