--- a/blog.html
+++ b/blog.html
@@ -17,26 +17,15 @@
     </nav>
 
     <main>
-        <h1>I miei articoli</h1>
-        <article class="card">
+       <article class="card">
             <h2>Titolo uno</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-            <button>Read more</button>
+            <p>Lorem ipsum dolor sit amet....</p>
+            <a href="articolo1.html"><button>Read more</button></a>
         </article>
         <article class="card">
             <h2>Titolo due</h2>
-            <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-                a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
-                Vivamus elementum semper nisi. Aenean vulputate eleifend tellus</p>
-            <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-                a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
-                Vivamus elementum semper nisi. Aenean vulputate eleifend tellus</p>
-            <button>Read more</button>
+            <p>Donec pede justo, fringilla vel, aliquet nec...</p>
+            <a href="articolo2.html"><button>Read more</button></a>
         </article>
     </main>
     <script src="script.js"></script>
