--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav>
-        <ul>
+        <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="blog.html">Articoli</a></li>
         </ul>
@@ -17,27 +17,22 @@
     </nav>
 
 
-    </ul>
-
+    
 
 
     </nav>
     <main>
-        <h1>Welcome to my blog</h1>
-        <article class="card">
-            <h2>Titolo uno</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-            <button>Read more</button>
-        </article>
-        <article class="card">
-            <h2>Titolo due</h2>
-            <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-                a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
-                Vivamus elementum semper nisi. Aenean vulputate eleifend tellus</p>
-            <button>Read more</button>
-        </article>
+        <h1>Welcome to my <span class="fuck"> fucking</span> blog</h1>
+        <p>This is my personal blog</p>
+        <section class ="preview">
+            <h2>Latest Articles</h2>
+            <ul>
+                <li><a href="articolo1.html">Articolo numero uno</a></li>
+                <li><a href="articolo2.html">Articolo numero due</a></li>
+            </ul>
+        </section>
+
+       
     </main>
     <script src="script.js"></script>
 
