migliorata home page

--- a/index.html
+++ b/index.html
@@ -16,20 +16,23 @@
         <button id="toggle-dark">Dark mode</button>
     </nav>
 
-
-    
-
-
-    </nav>
     <main>
         <h1>Welcome to my <span class="fuck"> fucking</span> blog</h1>
-        <p>This is my personal blog</p>
+        <p class="intro">This is my personal space where I share thoughts, experiences, and insights on various topics I’m passionate about. Whether it’s travel, technology, personal growth, or everyday life, you’ll find a little bit of everything here. I hope my posts inspire, inform, and maybe even entertain you.</p>
+        <p class="intro">Stay tuned and enjoy exploring!</p>
         <section class ="preview">
             <h2>Latest Articles</h2>
-            <ul>
-                <li><a href="articolo1.html">Articolo numero uno</a></li>
-                <li><a href="articolo2.html">Articolo numero due</a></li>
-            </ul>
+            <div class="grid-container">
+                <div class="article-card">
+                    <h3><a href="articolo1.html">Articolo numero uno</a></h3>
+                    <p>Short introduction to one</p>
+                </div>
+                <div class="article-card">
+                    <h3><a href="articolo2.html">Articolo numero due</a></h3>
+                    <p>Short introduction to two</p>
+                </div>
+            </div>
+
         </section>
 
        
