foto aggiunte agli articoli sulla home

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
         <section class ="preview">
             <h2>Latest Articles</h2>
             <div class="grid-container">
-                <div class="article-card">
+                <div class="article-card" >
+                    <img src="images/landscape-9556563_1280.jpg" class="imgpre">
                     <h3><a href="articolo1.html">Articolo numero uno</a></h3>
                     <p>Short introduction to one</p>
                 </div>
                 <div class="article-card">
+                    <img src="images/tiber-river-9505401_1280.jpg" class="imgpre"> 
                     <h3><a href="articolo2.html">Articolo numero due</a></h3>
                     <p>Short introduction to two</p>
                 </div>
