aggiunto il messaggio di benvenuto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <div id="welcome-message" class="banner">
+
+    </div>
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
